alteracao de rotas e config do client